# analysis-age-gender-cvae

./: .gitignore  README.md  analyze_trained_model.ipynb  pyproject.toml  train.py
data/: download_lagenda.sh
src/data/: lagenda.py  transform.py
src/models/: cvae.py
src/utils/: model_init.py
